@@ -60,6 +60,7 @@ static int FLAC_open(Sound_Sample *sample, const char *ext);
 static void FLAC_close(Sound_Sample *sample);
 static Uint32 FLAC_read(Sound_Sample *sample);
 static int FLAC_rewind(Sound_Sample *sample);
+static int FLAC_seek(Sound_Sample *sample, Uint32 ms);
 
 static const char *extensions_flac[] = { "FLAC", "FLA", NULL };
 
@@ -77,7 +78,8 @@ const Sound_DecoderFunctions __Sound_DecoderFunctions_FLAC =
     FLAC_open,       /*   open() method */
     FLAC_close,      /*  close() method */
     FLAC_read,       /*   read() method */
-    FLAC_rewind      /* rewind() method */
+    FLAC_rewind,     /* rewind() method */
+    FLAC_seek        /*   seek() method */
 };
 
     /* This is what we store in our internal->decoder_private field. */
@@ -389,6 +391,13 @@ static int FLAC_rewind(Sound_Sample *sample)
     FLAC__stream_decoder_process_metadata(f->decoder);
     return(1);
 } /* FLAC_rewind */
+
+
+static int FLAC_seek(Sound_Sample *sample, Uint32 ms)
+{
+    BAIL_MACRO("!!! FIXME: Not implemented", 0);
+} /* FLAC_seek */
+
 
 #endif /* SOUND_SUPPORTS_FLAC */
 
